[package]
name = "five-mem-node"
version = "0.1.0"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { git = "https://github.com/tikv/raft-rs"}
slog = "2.5"
slog-term = "2.6"
slog-async = "2.5"
protobuf = "2.16"
regex = "1.3"
